fix a overflow-hidden border-radius bug

--- a/source/style/common/_modal.sass
+++ b/source/style/common/_modal.sass
@@ -20,16 +20,13 @@
 		padding: 0
 		max-width: 80%
 		margin: 0 auto
-		border-radius: 5px
 		text-align: left
-		background-color: $white
-		background-repeat: no-repeat
-		background-position: center bottom
 		max-height: 100%
 		overflow-y: scroll
 	&__text
 		font-family: "Pantonbold", sans-serif
 		margin: 0
+		background-color: $white
 	&.show
 		animation: modal-show $transition-time_medium
 		animation-fill-mode: forwards
